@@ -1,289 +1,0 @@
-# Microsoft Developer Studio Generated Dependency File, included by ticables.mak
-
-..\..\src\link_avr.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\avr_link.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\avr_link.c"\
-	
-
-..\..\src\link_dev.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\dev_link.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\none.c"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\link_nul.c : \
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\Logging.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\link_par.c : \
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\Ioports.h"\
-	"..\..\src\linux\par_link.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\none.c"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\link_ser.c : \
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\Ioports.h"\
-	"..\..\src\linux\ser_link.c"\
-	"..\..\src\linux\ser_link2.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\none.c"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\link_slv.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\slv_link.c"\
-	"..\..\src\linux\slv_link2.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\macos\slv_link.c"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\slv_link.c"\
-	"..\..\src\win32\tiglusb.h"\
-	
-
-..\..\src\link_tie.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\tie_link.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\none.c"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\tie_link.c"\
-	
-
-..\..\src\link_tig.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\tig_link.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\tig_link.c"\
-	
-
-..\..\src\link_vti.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\vti_link.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\none.c"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\vti_link.c"\
-	
-
-..\..\src\link_vtl.c : \
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\linux\vtl_link.c"\
-	"..\..\src\Logging.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\vtl_link.c"\
-	
-
-..\..\src\win32\porttalk.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\export.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\detect.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\bsd\bsd_detect.c"\
-	"..\..\src\bsd\bsd_detect.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\linux_detect.c"\
-	"..\..\src\linux\linux_detect.h"\
-	"..\..\src\macos\macos_detect.c"\
-	"..\..\src\macos\macos_detect.h"\
-	"..\..\src\none.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\porttalk.h"\
-	"..\..\src\win32\win32_detect.c"\
-	"..\..\src\win32\win32_detect.h"\
-	
-
-..\..\src\direct.c : \
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_int.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\error.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\intrface.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_ver.h"\
-	"..\..\src\detect.h"\
-	"..\..\src\export.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\mapping.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\type2str.h"\
-	
-
-..\..\src\logging.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\export.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\mapping.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\bsd\bsd_mapping.c"\
-	"..\..\src\bsd\bsd_mapping.h"\
-	"..\..\src\bsd\links.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\linux\links.h"\
-	"..\..\src\linux\linux_detect.h"\
-	"..\..\src\linux\linux_mapping.c"\
-	"..\..\src\macos\macos_mapping.c"\
-	"..\..\src\macos\macos_mapping.h"\
-	"..\..\src\none.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\type2str.h"\
-	"..\..\src\win32\links.h"\
-	"..\..\src\win32\win32_mapping.c"\
-	"..\..\src\win32\win32_mapping.h"\
-	
-
-..\..\src\printl.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\export.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\type2str.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\export.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	
-
-..\..\src\verbose.c : \
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\export.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\Verbose.h"\
-	
-
-..\..\src\win32\win32_ioports.c : \
-	"..\..\..\..\..\Gtk2Dev\include\libintl.h"\
-	"..\..\src\Cabl_def.h"\
-	"..\..\src\Cabl_err.h"\
-	"..\..\src\Cabl_int.h"\
-	"..\..\src\export.h"\
-	"..\..\src\externs.h"\
-	"..\..\src\gettext.h"\
-	"..\..\src\Ioports.h"\
-	"..\..\src\printl.h"\
-	"..\..\src\stdints.h"\
-	"..\..\src\Timeout.h"\
-	"..\..\src\win32\porttalk_IOCTL.h"\
-	
