@@ -269,10 +269,5 @@ int avr_register_cable(TicableLinkCable * lc)
   lc->probe = avr_probe;
   lc->check = avr_check;
 
-  lc->set_red_wire = NULL;
-  lc->set_white_wire = NULL;
-  lc->get_red_wire = NULL;
-  lc->get_white_wire = NULL;
-
   return 0;
 }
