@@ -226,10 +226,5 @@ int tie_register_cable(TicableLinkCable * lc)
   lc->probe = tie_probe;
   lc->check = tie_check;
 
-  lc->set_red_wire = NULL;
-  lc->set_white_wire = NULL;
-  lc->get_red_wire = NULL;
-  lc->get_white_wire = NULL;
-
   return 0;
 }
