@@ -265,10 +265,5 @@ int vti_register_cable(TicableLinkCable * lc)
   lc->probe = vti_probe;
   lc->check = vti_check;
 
-  lc->set_red_wire = NULL;
-  lc->set_white_wire = NULL;
-  lc->get_red_wire = NULL;
-  lc->get_white_wire = NULL;
-
   return 0;
 }
