@@ -192,10 +192,5 @@ int vtl_register_cable(TicableLinkCable * lc)
   lc->probe = vtl_probe;
   lc->check = vtl_check;
 
-  lc->set_red_wire = NULL;
-  lc->set_white_wire = NULL;
-  lc->get_red_wire = NULL;
-  lc->get_white_wire = NULL;
-
   return 0;
 }
