@@ -199,6 +199,9 @@ int win32_register_cable(TicableType type, TicableLinkCable *lc)
 	ret = win32_map_io((TicableMethod)method, port);
 	if(ret)
 			return ret;
+
+	// set fields to default values
+	nul_register_cable(lc);
 	
 	// set the link cable
 	printl1(0, _("registering cable...\n"));
